services/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: kube-system
spec:
  selector:
    app: nginx-demo
  ports:
  - name: http
    targetPort: 80
    port: 80
