services/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: nginx.traefikgke
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo
          servicePort: 80
